--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,6 +18,9 @@
                     <div *ngIf="f.password.errors.required">Password is required</div>
                 </div>
             </div>
+            <div>
+                <button (click)="forgottenPassword();" class="btn btn-link float-left">Forgotten Password?</button>
+            </div>
             <div [formGroup]="loginForm" class="form-group">
                 <button type="submit" class="btn btn-primary float-right">Login</button>
             </div>
