worked on user profile, updated product component, and made admin authorization for backend and front end,

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -39,7 +39,7 @@
             <a class="nav-link" routerLink="/cart">Количка</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/profile">Профил</a>
+            <a class="nav-link" routerLink="/profile">{{"Добре дошли," + username}}</a>
         </li>
     </ul>
 </nav>
