--- a/src/app/pages/admin-module/admin-components/products/products.component.html
+++ b/src/app/pages/admin-module/admin-components/products/products.component.html
@@ -31,7 +31,7 @@
                             <span>{{product.name}}</span>
                         </td>
                         <td>
-                            <span>{{product.categoryId}}</span>
+                            <span>{{product.category.name}}</span>
                         </td>
                         <td>
                             <span>{{product.dateAdded}}</span>
@@ -73,7 +73,7 @@
                             <span>{{product.name}}</span>
                         </td>
                         <td>
-                            <span>{{product.categoryId}}</span>
+                            <span>{{product.category.name}}</span>
                         </td>
                         <td>
                             <span>{{product.dateAdded}}</span>
