--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~ngx-bar-rating/themes/br-default-theme' ;
 
 .table-header-td-sortable {
     background-color: #cedcd4;
